# ask-your-docs

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: config.py  main.py  rebuild_golden_chunks.py  review_results.py  run_evaluation.py
app/agent/: rag_agent.py
app/evaluation/: __init__.py  evaluation_runner.py  evaluator.py  golden_dataset.jsonl  judge_result.py  llm_judge.py  test_question.py
app/evaluation/data/: golden_dataset.jsonl
app/evaluation/models/: __init__.py  eval_result.py  test_question.py
app/evaluation/results/: judge_results.jsonl  metrics_results.jsonl
app/evaluation/results/data/: judge_results.jsonl  metrics_results.jsonl
app/evaluation/results/summaries/: result_1.txt  result_2.txt  result_3.txt  result_4.txt  result_5.txt
app/ingestion/: rag_pipeline.py
app/retrieval/: query_expander.py  reranker.py  vector_search.py
graphify-out/: .graphify_analysis.json  .graphify_semantic_marker  graph.html  graph.json
graphify-out/2026-05-23/: GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
