[project]
name = "ask-your-docs"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-pinecone>=0.2.13",
    "pinecone>=6.0.0",
    "python-dotenv>=1.0.0",
    "pdfminer-six>=20260107",
    "pypdf>=6.11.0",
    "langchain-text-splitters>=1.1.2",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.2.0",
]
